--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -1,12 +1,7 @@
-* {
-	margin: 0;
-}
-
 .header {
 	background-color: rgb(246, 52, 64);
 	color: white;
-	padding: 10px;
-	max-height: 60px;
+/*	max-height: 60px;*/
 }
 
 
@@ -41,12 +36,8 @@
 /* Styles for App */
 
 .order-section {
-	min-width: 75%;
 	height: 100%;
-	display: inline-block;
-	float: left;
 	border: 4px solid;
-	overflow: auto;
 }
 
 .menu {
@@ -90,7 +81,8 @@
 
 .banner {
 	background-image: url('../img/bamboo.jpg');
-	min-height: 40%; /*Ask Joey */
+	min-height: 60%;
+	min-height: 120px;
 }
 
 
