--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -1,7 +1,26 @@
+body {
+	padding-top: 15vh;
+}
+
+.app-container {
+	width: 100vw;
+}
+
+
+/*
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}*/
+
 .header {
 	background-color: rgb(246, 52, 64);
 	color: white;
-/*	max-height: 60px;*/
+	position: fixed;
+	width: 100%;
+	height: 15vh;
+	top: 0;
+	z-index: 100;
 }
 
 
@@ -35,14 +54,37 @@
 
 /* Styles for App */
 
-.order-section {
-	height: 100%;
-	border: 4px solid;
+.order-section{
+	display: inline-block;
+	height: 85vh;
+	width: 66%;
+	overflow: auto;
+}
+
+.shopping-section {
+	margin: 0;
+	float: right;
+	display: inline-block;
+	height: 85vh;
+	width: 34%;
+	/*width: 100%;*/
+	z-index: -1;
+}
+
+.checkout-section {
+	background-color: #a6a6a6;
+	height: 40vh;
+	width: 100%;
+}
+
+.cost-section {
+	height: 45vh;
+	overflow-y: scroll;
 }
 
 .menu {
 	border: 4px solid red;
-	max-width: 90%;
+	min-height: 65vh
 	margin: auto;
 }
 
@@ -58,15 +100,27 @@
 }
 
 .menu-item {
+	width: 45%;
+	display: inline-block;
 	border-bottom: 1px dotted black;
 	margin: 4px;
 	margin-left: 20px;
+	position: relative;
+}
+
+.menu-item:hover {
+	background-color: rgb(238, 238, 238);
 }
 
 .item-name {
 	color: #0066ff;
 	font-weight: bold;
 	display: inline-block;
+}
+
+.item-price {
+	float: right;
+
 }
 
 .add-to-cart {
@@ -77,12 +131,25 @@
 .quantity-input {
 	display: block;
 }
+
+.empty-bag{
+	position: absolute;
+	display: block;
+	top: 50%;
+	text-align: center;
+	margin: 0 auto;
+	vertical-align: middle;
+}
 /* Styles for Banner */
 
 .banner {
 	background-image: url('../img/bamboo.jpg');
-	min-height: 60%;
-	min-height: 120px;
+	height: 20vh;
+	width: 100%;
+}
+
+.banner-info h1{
+	margin-top: 0;
 }
 
 
@@ -105,4 +172,7 @@
 	float: right;
 }
 
+.shopping-item {
+	margin: 0 !important;
+}
 
