--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 body {
 	padding-top: 15vh;
 }
@@ -84,7 +88,7 @@ body {
 
 .menu {
 	border: 4px solid red;
-	min-height: 65vh
+	height: 40vh
 	margin: auto;
 }
 
@@ -144,7 +148,7 @@ body {
 
 .banner {
 	background-image: url('../img/bamboo.jpg');
-	height: 20vh;
+	min-height: 30vh;
 	width: 100%;
 }
 
