--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -4,6 +4,11 @@
 
 body {
 	padding-top: 15vh;
+	box-sizing: border-box;
+}
+
+a {
+	cursor: pointer;
 }
 
 .app-container {
@@ -44,6 +49,10 @@ body {
 	height: 60px;
 }
 
+.bag-icon-section {
+	padding-top: 4%;
+}
+
 .bag-count {
 	margin-bottom: 10px;
 }
@@ -63,6 +72,7 @@ body {
 	height: 84vh;
 	width: 66%;
 	overflow: auto;
+	box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 .shopping-section {
@@ -77,10 +87,24 @@ body {
 
 .customer-section {
 	height: 20vh;
+	border-bottom: 1px solid #efefef;
+}
+
+.customer-section div {
+	margin-left: 3%;
+}
+
+.order-title, .category-header {
+	font-weight: bold;
+	font-size: 1.5em;
+	border-bottom: 1px solid #efefef;
+}
+
+.order-title, .customer-info {
+	padding: 1%;
 }
 
 .checkout-section {
-	background-color: #a6a6a6;
 	height: 7vh;
 	width: 100%;
 	position: relative;
@@ -95,21 +119,49 @@ body {
 	width: 100%;
 	position: absolute;
 	bottom: 0;
-	margin-bottom: 1vh
+}
+
+.total-summary {
+	margin-top: 4%;
+}
+
+.subtotal-header, .subtotal-value, .sales-tax-value, .sales-tax-header, .total-summary-filler {
+	display: inline-block;
+}
+
+.subtotal-header, .sales-tax-header {
+	width: 20%;
+	padding-left: 1%;
+	text-align: right;
+}
+
+.total-summary-filler {
+	width: 60%;
+}
+.subtotal-value, .sales-tax-value {
+	width: 15%;
+	text-align: right;
+	padding-right: 5%
+}
+
+.change-address {
+	font-weight: bold;
+}
+
+.empty-cart {
+	display: inline-block;
+	font-weight: bold;
+	padding-top: 4%;
+	padding-left: 4%;
 }
 
 .menu {
-	border: 4px solid red;
 	height: 40vh
 	margin: auto;
 }
 
-.menu-category {
-	border: 4px solid blue;
-}
-
 .category-header {
-	background-color: #a6a6a6;
+	background-color: #ddd;
 	padding: 10px;
 	padding-left: 30px;
 	font-size: 1.5rem;
@@ -170,6 +222,9 @@ body {
 	margin-top: 0;
 }
 
+.banner-info {
+	padding: 2%;
+}
 
 /* clearfix */
 
@@ -191,6 +246,37 @@ body {
 }
 
 .shopping-item {
-	margin: 0 !important;
+	width: 100%;
 }
+
+.shopping-item {
+	border-bottom: 1px solid #efefef;
+	padding: 5px;
+}
+
+.shopping-item div{
+	display: inline-block;
+	margin-left: 10px;
+}
+
+.remove-section, .quantity-section, .item-cost-section {
+	width: 10%;
+}
+
+.remove-item-btn {
+	display: inline-block;
+	padding-left: 15%;
+}
+
+.item-cost-section {
+	text-align: right;
+}
+
+.item-name-section {
+	width: 50%;
+}
+
+
+
+
 
