Add Styles to Checkout Form
Add Padding to checkout page to move it from the left to right
Add Bottom Margins to headings

 Changes to be committed:
	modified:   Client/css/style.css

--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -338,7 +338,14 @@ a, .menu-item {
 	color: rgb(0, 112, 235);
 }
 
-.checkout-section {
-	display: inline-block;
+.checkout-page {
+	padding-left: 20px;
 }
 
+.delivery-form-header {
+	margin-bottom: 35px;
+}
+
+.delivery-contact-header{
+	margin-bottom: 20px;
+}
