Add Tip Buttons to Payment Form
Remove func definition in payment.js because it is no longer used anymore
Add Styling to Buttons and Input Groups
Correct Height of Input for Custom Tip to match the Button Height

 Changes to be committed:
	modified:   Client/checkout/payment.js
	modified:   Client/checkout/paymentForm.js
	modified:   Client/css/style.css

--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -378,3 +378,11 @@ a, .menu-item {
   -moz-border-radius: 8px;
  	border-radius: 8px;
 }
+
+.custom-tip-input {
+	height: 54px;
+}
+
+.btn-success {
+	height: 45px;
+}
