--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -410,3 +410,17 @@ a, .menu-item {
 .custom-tip-input {
 	cursor: pointer;
 }
+
+.redirect-message {
+	margin-left: 12px;
+	text-align: center;
+}
+
+.redirect-message p {
+	padding: 40px 10px 25px 10px;
+	font-size: 18px;
+}
+
+.redirect-message h2 {
+	padding-bottom: 15px;
+}
