Create RedirectToRestaurants Component
 Changes to be committed:
	new file:   Client/checkout/redirectToRestaurants.js
	modified:   Client/css/style.css

--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -424,3 +424,7 @@ a, .menu-item {
 .redirect-message h2 {
 	padding-bottom: 15px;
 }
+
+h2.redirect-checkout-padding {
+	padding: 10px 10px 30px;
+}
